--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -61,7 +61,7 @@
 
     <main>
         <h2>About Us</h2>
-        <p>This is a basic HTML website created by ChatGPT.</p>
+        <p>This is a basic HTML website created by even.</p>
     </main>
 
     <footer>
